--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,16 +3,30 @@ owner: bittybyte-au # Your GitHub organization or username, where this repositor
 repo: site-monitoring # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
+  - name: Your Chief AI Officer
+    url: https://yourchiefaiofficer.ai
+  - name: evince Consulting
+    url: https://evince.com.au
+  - name: BittyByte
+    url: https://bittybyte.com.au
+  - name: Amit Singh
+    url: https://amits.com.au
+  - name: BST Joinery
+    url: https://bstjoinery.com.au
+  - name: NextEra Bookkeeping
+    url: https://nexterabookkeeping.com.au 
+  - name: Guided Growth
+    url: https://guidedgrowth.com.au 
+  - name: Talent Journey
+    url: https://talentjourney.com.au 
+  - name: Capital Lift Finance
+    url: https://capitallift.com.au     
+  - name: Carmen Rossitto
+    url: https://carmenrossitto.com
+  - name: Moss & Tide Homes
+    url: https://mossandtide.com.au   
+  - name: Mind & heart Grief Counselling
+    url: https://mindandheartgriefcounselling.com.au
     port: 80
     check: "tcp-ping"
     ipv6: true
