--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -36,14 +36,17 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /site-monitoring
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: assets/bb-logo-icon.svg
   name: Site Monitoring
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introTitle: "**Site Monitoring**"
   introMessage: This is a status page to monitor uptime for BittyByte websites.
+  faviconSvg: assets/favicon.svg
+  i18n:
+    footer: [http://bittybyte.com.au](http://bittybyte.com.au)
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
+    - title: Docs
+      href: https://upptime.js.org/docs/
+    - title: Repo
       href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
