--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -36,11 +36,11 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /site-monitoring
-  logoUrl: assets/bb-logo-icon.svg
+  logoUrl: https://bittybyte-au.github.io/site-monitoring/assets/bb-icon.png
   name: Site Monitoring
   introTitle: "**Site Monitoring**"
   introMessage: This is a status page to monitor uptime for BittyByte websites.
-  faviconSvg: assets/favicon.svg
+  faviconSvg: https://bittybyte-au.github.io/site-monitoring/assets/favicon.svg
   navbar:
     - title: Docs
       href: https://upptime.js.org/docs/
