Update .upptimerc.yml - removed text under M&H

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,11 +25,8 @@ sites:
     url: https://carmenrossitto.com
   - name: Moss & Tide Homes
     url: https://mossandtide.com.au   
-  - name: Mind & heart Grief Counselling
+  - name: Mind & Heart Grief Counselling
     url: https://mindandheartgriefcounselling.com.au
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
