--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,15 +2,29 @@
 owner: bittybyte-au # Your GitHub organization or username, where this repository lives
 repo: site-monitoring # The name of this repository
 
+# Stops the “back up” spam where the DOWN issue was deleted (<15 min)
+skipDeleteIssues: true
+
+# Add a small pause between checks so you don't “burst” 12 sites at once
+delay: 2000 # 2 seconds
+
+# Reduce flapping by checking less often (default is */5)
+workflowSchedule:
+  uptime: "*/10 * * * *"
+
 sites:
   - name: Your Chief AI Officer
     url: https://yourchiefaiofficer.ai
+    type: globalping
+    location: australia    
   - name: evince Consulting
     url: https://evince.com.au
   - name: BittyByte
     url: https://bittybyte.com.au
   - name: Amit Singh
     url: https://amits.com.au
+    type: globalping
+    location: australia  
   - name: BST Joinery
     url: https://bstjoinery.com.au
   - name: NextEra Bookkeeping
@@ -19,6 +33,8 @@ sites:
     url: https://guidedgrowth.com.au 
   - name: Talent Journey
     url: https://talentjourney.com.au 
+    type: globalping
+    location: australia    
   - name: Capital Lift Finance
     url: https://capitallift.com.au     
   - name: Carmen Rossitto
